# geogram

./: .gitignore  .gitmodules  CDT__2d_8h.html  CDT__2d_8h.js  CDT__2d_8h_source.html  CMakeLists.txt  CMakeOptions.txt.Gargantua  CMakeOptions.txt.gargantua  CMakeOptions.txt.graphite  CVT_8h.html  CVT_8h.js  CVT_8h_source.html  FF_8h_source.html  FF__visu_8h_source.html  GLSL_8h.html  GLSL_8h.js  GLSL_8h_source.html  GLUPES_2fragment__shader_8h_source.html  GLUPES_2fragment__shader__utils_8h_source.html  GLUPES_2lines__fragment__shader_8h_source.html  GLUPES_2points__fragment__shader_8h_source.html  GLUPES_2points__vertex__shader_8h_source.html  GLUPES_2spheres__fragment__shader_8h_source.html  GLUPES_2spheres__vertex__shader_8h_source.html  GLUPES_2thick__lines__fragment__shader_8h_source.html  GLUPES_2thick__lines__vertex__shader_8h_source.html  GLUPES_2vertex__shader_8h_source.html  GLUPGLSL_2fragment__shader_8h_source.html  GLUPGLSL_2lines__fragment__shader_8h_source.html  GLUPGLSL_2points__fragment__shader_8h_source.html  GLUPGLSL_2points__vertex__shader_8h_source.html  GLUPGLSL_2spheres__fragment__shader_8h_source.html  GLUPGLSL_2spheres__vertex__shader_8h_source.html  GLUPGLSL_2thick__lines__fragment__shader_8h_source.html  GLUPGLSL_2thick__lines__vertex__shader_8h_source.html  GLUPGLSL_2vertex__shader_8h_source.html  GLUP_2fragment__shader__utils_8h_source.html  GLUP_8h.html  GLUP_8h.js  GLUP_8h_source.html  (+1843 more)
doc/: CMakeLists.txt  VERSION.txt.in  common.dox  devkit-full.dox.in  devkit-internal-light.dox.in  devkit-internal.dox.in  devkit.dox.in
doc/devkit/: PSM.dox  compiling.dox  design.dox  examples.dox  license.dox  mainpage.dox  programmer.dox
doc/tutorials/: Delaunay.md  Delaunay2D.md  Delaunay3D.md  Mesh.md  Raytrace.md  compiling_Linux.md  compiling_MacOS.md  compiling_Windows.md
src/examples/contrib/topopt/: CMakeCache.txt  CMakeLists.txt  Makefile  README.txt  cmake_install.cmake  element.h  layout.h  main.cpp  mesh_primitives.cpp  mesh_primitives.h  topopt.cpp  topopt.h
src/examples/exploragram/compute_OTM/: CMakeLists.txt  main.cpp
src/examples/graphics/demo_Evert/: CMakeLists.txt  generateGeometry.cpp  generateGeometry.h  main.cpp  uv.xpm
src/lib/exploragram/: CMakeLists.txt
src/lib/exploragram/api/: defs.h
src/lib/exploragram/basic/: common.h
src/lib/exploragram/hexdom/: FF.cpp  FF.h  FF_visu.cpp  FF_visu.h  PGP.cpp  PGP.h  basic.cpp  basic.h  cavity.cpp  cavity.h  extra_connectivity.cpp  extra_connectivity.h  frame.cpp  frame.h  geometry.cpp  geometry.h  hex.cpp  hex.h  hex_candidates.cpp  hex_candidates.h  hex_cruncher.cpp  hex_cruncher.h  hex_dominant.cpp  hex_dominant.h  hexdom_pipeline.cpp  hexdom_pipeline.h  id_map.h  intersect_tools.cpp  intersect_tools.h  mesh_inspector.cpp  mesh_inspector.h  mesh_utils.cpp  mesh_utils.h  meshcomesh.cpp  meshcomesh.h  mixed_constrained_solver.h  polygon.cpp  polygon.h  preprocessing.cpp  preprocessing.h  (+14 more)
src/lib/exploragram/optimal_transport/: VSDM.cpp  VSDM.h  linear_least_squares.cpp  linear_least_squares.h  optimal_transport.cpp  optimal_transport.h  optimal_transport_2d.cpp  optimal_transport_2d.h  optimal_transport_3d.cpp  optimal_transport_3d.h  optimal_transport_on_surface.cpp  optimal_transport_on_surface.h  sampling.cpp  sampling.h
src/lib/geogram/: CMakeLists.txt  geogram.pc.in
src/lib/geogram/NL/: OpenNL.psm  nl.h  nl_64.h  nl_amgcl.cpp  nl_amgcl.h  nl_api.c  nl_arpack.c  nl_arpack.h  nl_blas.c  nl_blas.h  nl_cholmod.c  nl_cholmod.h  nl_context.c  nl_context.h  nl_cuda.c  nl_cuda.h  nl_ext.h  nl_iterative_solvers.c  nl_iterative_solvers.h  nl_linkage.h  nl_matrix.c  nl_matrix.h  nl_mkl.c  nl_mkl.h  nl_os.c  nl_preconditioners.c  nl_preconditioners.h  nl_private.h  nl_superlu.c  nl_superlu.h
src/lib/geogram/api/: defs.h
src/lib/geogram/basic/: algorithm.cpp  algorithm.h  android_utils.cpp  android_utils.h  android_wrapper.h  argused.h  assert.cpp  assert.h  atomics.h  attributes.cpp  attributes.h  b_stream.cpp  b_stream.h  boolean_expression.cpp  boolean_expression.h  command_line.cpp  command_line.h  command_line_args.cpp  command_line_args.h  common.cpp  common.h  counted.cpp  counted.h  debug_stream.cpp  debug_stream.h  determinant.h  environment.cpp  environment.h  factory.cpp  factory.h  file_system.cpp  file_system.h  geofile.cpp  geofile.h  geometry.cpp  geometry.h  geometry_nd.h  life_cycle.cpp  life_cycle.h  line_stream.cpp  (+32 more)
src/lib/geogram/bibliography/: bibliography.cpp  bibliography.h  embed_bib_files.sh  embedded_references.cpp  geogram.bib
src/lib/geogram/delaunay/: CDT_2d.cpp  CDT_2d.h  Delaunay.psm  LFS.cpp  LFS.h  cavity.h  delaunay.cpp  delaunay.h  delaunay_2d.cpp  delaunay_2d.h  delaunay_3d.cpp  delaunay_3d.h  delaunay_nn.cpp  delaunay_nn.h  delaunay_sync.h  delaunay_tetgen.cpp  delaunay_tetgen.h  delaunay_triangle.cpp  delaunay_triangle.h  parallel_delaunay_3d.cpp  parallel_delaunay_3d.h  periodic.cpp  periodic.h  periodic_delaunay_3d.cpp  periodic_delaunay_3d.cpp.000  periodic_delaunay_3d.h
src/lib/geogram/image/: color.cpp  color.h  colormap.cpp  colormap.h  image.cpp  image.h  image_library.cpp  image_library.h  image_rasterizer.cpp  image_rasterizer.h  image_serializer.cpp  image_serializer.h  image_serializer_pgm.cpp  image_serializer_pgm.h  image_serializer_stb.cpp  image_serializer_stb.h  image_serializer_xpm.cpp  image_serializer_xpm.h  morpho_math.cpp  morpho_math.h
src/lib/geogram/lua/: lua.h  lua_io.cpp  lua_io.h  lua_vec_mat.h  lua_wrap.h
src/lib/geogram/mesh/: boxes_intersections.cpp  boxes_intersections.h  index.h  mesh.cpp  mesh.h  mesh_AABB.cpp  mesh_AABB.h  mesh_CSG.cpp  mesh_CSG.h  mesh_CSG_builder.cpp  mesh_CSG_builder.h  mesh_CSG_compiler.cpp  mesh_CSG_compiler.h  mesh_CSG_utils.cpp  mesh_CSG_utils.h  mesh_baking.cpp  mesh_baking.h  mesh_compare.cpp  mesh_compare.h  mesh_convex_hull.cpp  mesh_convex_hull.h  mesh_decimate.cpp  mesh_decimate.h  mesh_degree3_vertices.cpp  mesh_degree3_vertices.h  (+45 more)
src/lib/geogram_gfx/: CMakeLists.txt  geogram_gfx.pc.in
src/tests/test_nn_search/: CMakeLists.txt  main.cpp  nn_search_ANN.cpp  nn_search_ANN.h
(+1983 files in other folders)
